# q-cube

./: .env.example  .gitignore  .prettierignore  .prettierrc  Architecture.md  CLAUDE.md  CONTRIBUTING.md  README.md  docker-compose.yml  ecosystem.config.cjs  eslint.config.mjs  package.json  pnpm-lock.yaml  shaping.md  tsconfig.base.json
services/ai-assistant/: pyproject.toml
services/ai-assistant/alembic/: env.py
services/ai-assistant/tests/: conftest.py  test_backtest_narrator.py  test_cost_budget.py  test_council_agent_factory.py  test_council_benchmark.py  test_council_debate_protocol.py  test_council_hard_rejects.py  test_council_orchestrator.py  test_council_profiles.py  test_e2e_integration.py  test_evaluation.py  test_free_chat.py  test_guardrails.py  test_internal_tools.py  test_llm_adapter.py  test_metric_explainer.py  test_observability.py  test_pii_detector.py  test_prompts.py  test_quality_evaluation.py  test_rag_chunker.py  test_rag_retriever.py  test_ranking_explainer.py  test_response_builder.py  test_rubric_suggester.py  test_security.py  test_web_tools.py
services/fundamentals-engine/: pyproject.toml
services/fundamentals-engine/scripts/: backfill_b3_cotahist.py  backfill_cvm_shares.py  backfill_distribution_canonical_keys.py  backfill_historical_filings.py  backfill_historical_snapshots.py  backfill_market_cap.py  backfill_shares_annual.py  backfill_shares_outstanding.py  build_research_panel.py  classify_universe.py  compute_nby_proxy_free.py  recompute_npy_metrics.py  reconcile_cvm_yahoo_shares.py  refresh_snapshots_and_recompute.py  remap_dfc_distributions.py  s35_data_remediation.py
services/fundamentals-engine/tests/: conftest.py  test_b3_adapter.py  test_b3_cotahist_parser.py  test_cvm_shares_loader.py  test_cvm_shares_lookup.py  test_cvm_shares_parser.py  test_dividend_yield.py  test_fetch_snapshots_task.py  test_market_snapshot_factory.py  test_market_snapshots.py  test_metrics.py  test_net_buyback_yield.py  test_net_payout_yield.py  test_normalization.py  test_parsers.py  test_pit_enforcement.py  test_quality_flags.py  test_restatements.py  test_snapshot_persistence.py  test_source_tiers.py  test_ticker_resolution.py  test_ttm.py  test_universe_classification.py  test_validation.py  test_yahoo_adapter.py  test_yahoo_live.py
services/market-ingestion/: README.md  package.json  pyproject.toml
services/quant-engine/: README.md  alembic.ini  package.json  pyproject.toml  validation_report_v1.json
services/quant-engine/alembic/: env.py
services/quant-engine/scripts/: backfill_issuer_sectors.py  run_canonical_experiment.py  run_comparative_attribution.py  run_e2e_backtest.py  run_full_validation.py  run_hybrid_robustness.py  run_hybrid_walk_forward.py  run_hybrid_walk_forward_v2.py  run_phase0_shakeout.py  run_pilot_month.py  run_plan2_validation.py  run_ticker_decisions.py  seed_benchmark.py  seed_historical_prices.py  seed_real_market_data.py  seed_strategy_registry.py  seed_yahoo_benchmark.py  seed_yahoo_market_data.py  validate_decisions.py
services/quant-engine/tests/: conftest.py  test_backtest.py  test_comparison_engine.py  test_contribution.py  test_manifest.py  test_metrics.py  test_persistence.py  test_pit.py  test_pit_integration.py  test_promotion.py  test_purged_validation.py  test_ranking_spec.py  test_reality_check.py  test_refiner_flags.py  test_refiner_missing_data.py  test_refiner_scoring.py  test_reports.py  test_splits.py  (+2 more)
(+538 files in other folders)
