[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "q3-market-ingestion"
version = "0.1.0"
description = "Q³ market ingestion service"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "fastapi>=0.135.1",
  "uvicorn>=0.41.0",
  "pydantic>=2.12.5"
]

[project.optional-dependencies]
dev = [
  "pytest>=9.0.2",
  "ruff>=0.15.5",
  "mypy>=1.19.1"
]

[project.scripts]
q3-market-ingestion = "q3_market_ingestion.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
